--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <body>
         <main>
-            Exam 1
+            Exam 1 baby
         </main>
         
         <script src="js/app.js"></script>
