--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
     
     <body>
         <main>
-            <div></div>
-            Exam1 hello
+            <div class="jumbotron">
+			<h1>Random Dog Gallery</h1>
+			<p>Please enter the number of random images you'd like to generate</p>
+			<form action="/" method="post" onsubmit="buildGallery(); return false;">
+				<div class="form-group row">
+					<label for="number-images" class="col-sm-2 col-form-label">Number of Images</label>
+					<div class="col-sm-4">
+						<input type="text" class="form-control" id="number-images" placeholder="0" required>
+					</div>
+					<div class="col-sm-6">
+						<button type="submit" class="btn btn-primary">Generate</button>
+					</div>
+				</div>
+			</form>
+		</div>	
         </main>
         
         <script src="js/app.js"></script>
