--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <main>
             <div id="mainContent" class="container">
-                <div id="query">
+                <div id="query" class="jumbotron">
                     <h1>Open Library</h1>
                     <p>Please enter the ISBN of the book you'd like to retrieve</p>
                     <div id="inputRow" class="row">
