--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                     <h1>Open Library</h1>
                     <p>Please enter the ISBN of the book you'd like to retrieve</p>
                     <div id="inputRow" class="row">
-                        <label for="isbnInput" class="col-2">ISBN</label>
-                        <input type="text" class="col-4">
-                        <button id="isbnInput" class="col-6 btn btn-primary">Query</button>
+                        <label for="isbnInput" class="col">ISBN</label>
+                        <input type="text" class="col">
+                        <button id="isbnInput" class="btn btn-primary">Query</button>
                     </div>
                 </div>
                 <div id="result">
