--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <p>Please enter the ISBN of the book you'd like to retrieve</p>
                     <div id="inputRow" class="row">
                         <label for="isbnInput" class="col">ISBN</label>
-                        <input type="text" class="col">
-                        <button id="isbnInput" class="btn btn-primary">Query</button>
+                        <input id="isbnInput" type="text" class="col">
+                        <button id="queryButton" class="btn btn-primary">Query</button>
                     </div>
                 </div>
                 <div id="result">
