--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
                         <button id="queryButton" class="btn btn-primary">Query</button>
                     </div>
                 </div>
-                <div id="result">
-                    
+                <div id="result" class="row">
+                    <img id="cover" class="col-3 cover col" alt="imageHere">
+                    <span id="title">Title <p id="titleValue"></p></span>
+                    <span id="Author">Author <p id="authorValue"></p></span>
+                    <span id="Year">Year <p id="yearValue"></p></span>
+                    <span id="Publisher">Publisher <p id="publisherValue"></p></span>
+                    <span id="ISBN">ISBN <p id="isbnValue"></p></span>
+                    <span id="Pages">Pages <p id="pagesValue"></p></span>
                 </div>
             </div>
         </main>
