--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div id="result" class="row">
                     <img id="cover" class="col-3 cover col" alt="imageHere">
-                    <span id="title">Title <p id="titleValue"></p></span>
+                    <span id="title">Title <p id="titleValue"></p></span><br>
                     <span id="Author">Author <p id="authorValue"></p></span>
                     <span id="Year">Year <p id="yearValue"></p></span>
                     <span id="Publisher">Publisher <p id="publisherValue"></p></span>
