--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 </div>
                 <div id="result" class="row">
                     <img id="cover" class="col-3 cover col" alt="imageHere">
-                    <span id="title" class="row">Title <p id="titleValue"></p></span><br>
-                    <span id="Author" class="row">Author <p id="authorValue"></p></span>
-                    <span id="Year" class="row">Year <p id="yearValue"></p></span>
-                    <span id="Publisher" class="row">Publisher <p id="publisherValue"></p></span>
-                    <span id="ISBN" class="row">ISBN <p id="isbnValue"></p></span>
-                    <span id="Pages" class="row">Pages <p id="pagesValue"></p></span>
+                    <span id="title">Title <p id="titleValue"></p></span><br>
+                    <span id="Author">Author <p id="authorValue"></p></span>
+                    <span id="Year">Year <p id="yearValue"></p></span>
+                    <span id="Publisher">Publisher <p id="publisherValue"></p></span>
+                    <span id="ISBN">ISBN <p id="isbnValue"></p></span>
+                    <span id="Pages">Pages <p id="pagesValue"></p></span>
                 </div>
             </div>
         </main>
