--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     </div>
                 </div>
                 <div id="result" class="row">
+                    <p>I got the api to work, you can see the data in the console. </p>
                     <img id="cover" class="col-3 cover col" alt="imageHere">
                     <span id="title">Title <p id="titleValue"></p></span><br>
                     <span id="Author">Author <p id="authorValue"></p></span>
